--- a/templates/events.html
+++ b/templates/events.html
@@ -115,6 +115,7 @@
                                         <br>&#x2022;Number of teams - 100
                                         <br>&#x2022;number of participants per team - 3
                                         click on the banner to learn more 
+                                        <br><a href="https://forms.gle/DVBJk6t1zQarWdXs7" target="_blank" style="display: inline-block; padding: 10px 20px; font-size: 16px; color: blue; background-color: orange; text-align: center; text-decoration: none; border-radius: 5px;">click here to register</a>
                                     </span>
                                 </div>
                             </div>
@@ -135,6 +136,7 @@
                                         <br>&#x2022;Number of teams - 114
                                         <br>&#x2022;number of participants per team - 3
                                         click on the banner to learn more 
+                                        <br><a href="https://forms.gle/DVBJk6t1zQarWdXs7" target="_blank" style="display: inline-block; padding: 10px 20px; font-size: 16px; color: blue; background-color: orange; text-align: center; text-decoration: none; border-radius: 5px;">click here to register</a>
                                         </span>
                                 </div>
                             </div>
@@ -154,6 +156,8 @@
                                         <br>&#x2022;Number of teams - 76
                                         <br>&#x2022;number of participants per team - 2
                                         click on the banner to learn more 
+                                        <br><a href="https://forms.gle/DVBJk6t1zQarWdXs7" target="_blank" style="display: inline-block; padding: 10px 20px; font-size: 16px; color: blue; background-color: orange; text-align: center; text-decoration: none; border-radius: 5px;">click here to register</a>
+
                                         </span>
                                 </div>
                             </div>
@@ -174,6 +178,7 @@
                                         <br>&#x2022;Number of teams - 50
                                         <br>&#x2022;number of participants per team - 4
                                         click on the banner to learn more 
+                                        <br><a href="https://forms.gle/DVBJk6t1zQarWdXs7" target="_blank" style="display: inline-block; padding: 10px 20px; font-size: 16px; color: blue; background-color: orange; text-align: center; text-decoration: none; border-radius: 5px;">click here to register</a>
                                     </span>
                                 </div>
                             </div>
@@ -193,6 +198,7 @@
                                         <br>&#x2022;Number of teams - 60
                                         <br>&#x2022;number of participants per team - 3
                                         click on the banner to learn more 
+                                        <br><a href="https://forms.gle/DVBJk6t1zQarWdXs7" target="_blank" style="display: inline-block; padding: 10px 20px; font-size: 16px; color: blue; background-color: orange; text-align: center; text-decoration: none; border-radius: 5px;">click here to register</a>
                                     </span>
                                 </div>
                             </div>
@@ -212,6 +218,7 @@
                                         <br>&#x2022;Number of teams - 60
                                         <br>&#x2022;number of participants per team - 4
                                         click on the banner to learn more 
+                                        <br><a href="https://forms.gle/DVBJk6t1zQarWdXs7" target="_blank" style="display: inline-block; padding: 10px 20px; font-size: 16px; color: blue; background-color: orange; text-align: center; text-decoration: none; border-radius: 5px;">click here to register</a>
                                     </span>
                                 </div>
                             </div>
@@ -231,6 +238,7 @@
                                         <br>&#x2022;Number of teams - 72
                                         <br>&#x2022;number of participants per team - 3
                                         click on the banner to learn more 
+                                        <br><a href="https://forms.gle/DVBJk6t1zQarWdXs7" target="_blank" style="display: inline-block; padding: 10px 20px; font-size: 16px; color: blue; background-color: orange; text-align: center; text-decoration: none; border-radius: 5px;">click here to register</a>
                                     </span>
                                 </div>
                             </div>
@@ -248,6 +256,7 @@
                                     <span>Step right up and experience the thrill of our science carnival! Dive into hands-on experiments, mind-bending demonstrations, and interactive exhibits. Unleash your inner scientist and join us for a day of fun and discovery!
                                         <br>&#x2022;25 stalls for model-making,events and games!
                                         click on the banner to learn more 
+                                        <br><a href="https://forms.gle/DVBJk6t1zQarWdXs7" target="_blank" style="display: inline-block; padding: 10px 20px; font-size: 16px; color: blue; background-color: orange; text-align: center; text-decoration: none; border-radius: 5px;">click here to register</a>
                                         </span>
                                 </div>
                             </div>
@@ -268,6 +277,7 @@
                                         <br>&#x2022;Number of teams - 60
                                         <br>&#x2022;number of participants per team - 4
                                         click on the banner to learn more 
+                                        <br><a href="https://forms.gle/DVBJk6t1zQarWdXs7" target="_blank" style="display: inline-block; padding: 10px 20px; font-size: 16px; color: blue; background-color: orange; text-align: center; text-decoration: none; border-radius: 5px;">click here to register</a>
                                     </span>
                                 </div>
                             </div>
@@ -295,6 +305,7 @@
                                         <br>&#x2022;Number of teams - 125 
                                         <br>&#x2022;number of participants per team - 3-4 
                                         click on the banner to learn more 
+                                        <br><a href="https://forms.gle/DVBJk6t1zQarWdXs7" target="_blank" style="display: inline-block; padding: 10px 20px; font-size: 16px; color: blue; background-color: orange; text-align: center; text-decoration: none; border-radius: 5px;">click here to register</a>
                                     </span>
                                 </div>
                             </div>
@@ -314,6 +325,7 @@
                                         <br>&#x2022;Number of teams - 700
                                         <br>&#x2022;number of participants per team - 1 
                                         click on the banner to learn more 
+                                        <br><a href="https://forms.gle/DVBJk6t1zQarWdXs7" target="_blank" style="display: inline-block; padding: 10px 20px; font-size: 16px; color: blue; background-color: orange; text-align: center; text-decoration: none; border-radius: 5px;">click here to register</a>
                                     </span>
                                 </div>
                             </div>
@@ -340,6 +352,7 @@
                                         <br>&#x2022;Number of teams - sorted during the event based on performance 
                                         <br>&#x2022;number of participants per team - sorted during the event based on performance
                                         click on the banner to learn more 
+                                        <br><a href="https://forms.gle/DVBJk6t1zQarWdXs7" target="_blank" style="display: inline-block; padding: 10px 20px; font-size: 16px; color: blue; background-color: orange; text-align: center; text-decoration: none; border-radius: 5px;">click here to register</a>
                                      </span>
                                 </div>
                             </div>
@@ -364,6 +377,7 @@
                                         <br>&#x2022;Number of teams - 320
                                         <br>&#x2022;number of participants per team - 1
                                         click on the banner to learn more 
+                                        <br><a href="https://forms.gle/DVBJk6t1zQarWdXs7" target="_blank" style="display: inline-block; padding: 10px 20px; font-size: 16px; color: blue; background-color: orange; text-align: center; text-decoration: none; border-radius: 5px;">click here to register</a>
                                     </span>
                                 </div>
                             </div>
@@ -383,6 +397,7 @@
                                         <br>&#x2022;Number of teams - 100-150
                                         <br>&#x2022;number of participants per team - 3-5 per team
                                         click on the banner to learn more 
+                                        <br><a href="https://forms.gle/DVBJk6t1zQarWdXs7" target="_blank" style="display: inline-block; padding: 10px 20px; font-size: 16px; color: blue; background-color: orange; text-align: center; text-decoration: none; border-radius: 5px;">click here to register</a>
                                     </span>
                                 </div>
                             </div>
@@ -402,6 +417,7 @@
                                         <br>&#x2022;Number of teams - 100-150 teams
                                         <br>&#x2022;number of participants per team - 3-5 per team
                                         click on the banner to learn more 
+                                        <br><a href="https://forms.gle/DVBJk6t1zQarWdXs7" target="_blank" style="display: inline-block; padding: 10px 20px; font-size: 16px; color: blue; background-color: orange; text-align: center; text-decoration: none; border-radius: 5px;">click here to register</a>
                                     </span>
                                 </div>
                             </div>
@@ -421,6 +437,7 @@
                                         <br>&#x2022;Number of teams - 100-150 teams
                                         <br>&#x2022;number of participants per team - 3-5 per team
                                         click on the banner to learn more 
+                                        <br><a href="https://forms.gle/DVBJk6t1zQarWdXs7" target="_blank" style="display: inline-block; padding: 10px 20px; font-size: 16px; color: blue; background-color: orange; text-align: center; text-decoration: none; border-radius: 5px;">click here to register</a>
                                     </span>
                                 </div>
                             </div>
@@ -440,7 +457,8 @@
                                         <br>
                                         <br>&#x2022;Number of teams - 50
                                         <br>&#x2022;number of participants per team - Solo or 2-4 per team 
-                                        click on the banner to learn more 
+                                        click on the banner to learn more
+                                        <br><a href="https://forms.gle/DVBJk6t1zQarWdXs7" target="_blank" style="display: inline-block; padding: 10px 20px; font-size: 16px; color: blue; background-color: orange; text-align: center; text-decoration: none; border-radius: 5px;">click here to register</a>
                                     </span>
                                 </div>
                             </div>
@@ -460,7 +478,8 @@
                                         <br>
                                         <br>&#x2022;Number of teams - 20-40
                                         <br>&#x2022;number of participants per team - 3-5 per team
-                                        click on the banner to learn more 
+                                        click on the banner to learn more
+                                        <br><a href="https://forms.gle/DVBJk6t1zQarWdXs7" target="_blank" style="display: inline-block; padding: 10px 20px; font-size: 16px; color: blue; background-color: orange; text-align: center; text-decoration: none; border-radius: 5px;">click here to register</a>
                                     </span>
                                 </div>
                             </div>
@@ -481,6 +500,8 @@
                                         <br>&#x2022;Number of teams - 150
                                         <br>&#x2022;number of participants per team - 3-5 per team 
                                         click on the banner to learn more 
+                                        <br><a href="https://forms.gle/DVBJk6t1zQarWdXs7" target="_blank" style="display: inline-block; padding: 10px 20px; font-size: 16px; color: blue; background-color: orange; text-align: center; text-decoration: none; border-radius: 5px;">click here to register</a>
+
                                     </span>
                                 </div>
                             </div>
@@ -501,6 +522,8 @@
                                         <br>&#x2022;number of participants per team (Kiss & Kick) - 1 per team
                                         <br>&#x2022;number of participants per team (The impact commentator) - 2-3 per team
                                         click on the banner to learn more 
+                                        <br><a href="https://forms.gle/DVBJk6t1zQarWdXs7" target="_blank" style="display: inline-block; padding: 10px 20px; font-size: 16px; color: blue; background-color: orange; text-align: center; text-decoration: none; border-radius: 5px;">click here to register</a>
+
                                     </span>
                                 </div>
                             </div>
@@ -517,11 +540,11 @@
                                     <h4>Ruins to Riches</h4>
                                     <span>
                                         Step into the world of "Ruins to Riches"! Bid strategically, negotiate tactfully, and rebuild a city from ancient ruins to a thriving metropolis. Compete against others to create the most prosperous urban landscape. Join us for a dynamic event where every decision shapes the future of your city!
-
                                         <br>
                                         <br>&#x2022;Number of teams - 20-25 
                                         <br>&#x2022;number of participants per team - 4-5 per team
                                         click on the banner to learn more 
+                                        <br><a href="https://forms.gle/DVBJk6t1zQarWdXs7" target="_blank" style="display: inline-block; padding: 10px 20px; font-size: 16px; color: blue; background-color: orange; text-align: center; text-decoration: none; border-radius: 5px;">click here to register</a>
                                     </span>
                                 </div>
                             </div>
@@ -541,6 +564,7 @@
                                         <br>&#x2022;Number of teams - 80-100
                                         <br>&#x2022;number of participants per team - 3-5
                                         click on the banner to learn more 
+                                        <br><a href="https://forms.gle/DVBJk6t1zQarWdXs7" target="_blank" style="display: inline-block; padding: 10px 20px; font-size: 16px; color: blue; background-color: orange; text-align: center; text-decoration: none; border-radius: 5px;">click here to register</a>
                                     </span>
                                 </div>
                             </div>
