--- a/templates/events.html
+++ b/templates/events.html
@@ -27,6 +27,17 @@
     <link rel="stylesheet" href="static/css/style.css">
     <!-- <link rel="stylesheet" href="static/css/responsive.css"> -->
 </head>
+<!-- google analytics section -->
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PKTS5SEVQL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PKTS5SEVQL');
+</script>
 
 <body>
     <header>
@@ -631,10 +642,15 @@
                         Dwaraka Nagar, Banashankari,
                         Bengaluru, Karnataka 560085</p>
                 </div>
-                <div class="single_info" >
-                    <span>Phone:</span>
-                    <p style="font-size:15px;">080102 97297</p>
-                </div>
+                          <div class="single_info" >
+                <span>Phone:</span>
+                <p style="font-size:15px;">
+                   <br> Travel and accomodation queries Yatharth:6364000899
+                   <br> General queries Lakshya:9535528465
+                   <br> Event queries Shreyas:6361110359
+                   <br> Registration queries Vineet:8660282426
+                </p>
+            </div>
                 <div class="single_info">
                     <span>Email:</span>
                     <p style="font-size:15px;margin-left: 2%;">tams@pes.edu</p>
@@ -645,24 +661,21 @@
     
     <footer class="footer">
         <div class="footer_top">
-                        <div class="container">
+            <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-6 col-md-8">
                         <div class="footer_widget">
                             <div class="footer-logo-container">
                                 <img src="static/img/about/something.png" alt="TAS logo" class="footer-logo-image">
                                 <h1> </h1>
-                                <!-- <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">Come Meet Us!</h3> -->
                                 <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s"></p>
                                 
-                               
                                 <div class="row justify-content-center book_btn">
                                     <a href="https://forms.gle/DVBJk6t1zQarWdXs7" class="register-btn">REGISTER NOW</a>
                                 </div>
                                 
-                                    <div class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-left-align">
-                                    <div class="gdlr-core-divider-line gdlr-core-skin-divider" style="border-color: #303B51; border-width: 2px;">
-                                    </div>
+                                <div class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-left-align">
+                                    <div class="gdlr-core-divider-line gdlr-core-skin-divider" style="border-color: #303B51; border-width: 2px;"></div>
                                 </div>
                             </div>
                         </div>
@@ -680,13 +693,12 @@
                                 <li><a href="https://forms.gle/ormi3s4MR5g2a6Gd6">Register</a></li>
                                 <li><a href="#">Events</a></li>
                                 <li><a href="https://www.instagram.com/pesu.tams?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Instagram</a></li>
-    
                             </ul>
                         </div>
                     </div>
                     <div class="col-md-3" style="border-left: 1px solid white;">
-                        <div class="footer_widget" >
-                            <h3 class="kingster-widget-title" >Events - TAS</h3>
+                        <div class="footer_widget">
+                            <h3 class="kingster-widget-title">Events - TAS</h3>
                             <ul class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain">
                                 <li><a href="/events#narrativeNexus">Narrative Nexus</a></li>
                                 <li><a href="/events#Innovate&Automate">Innovate & Automate</a></li>
@@ -718,10 +730,19 @@
                             </ul>
                         </div>
                     </div>
+                    <div class="col-md-3" style="border-left: 1px solid white;">
+                        <div class="footer_widget">
+                            <h3 class="kingster-widget-title">Contact Us</h3>
+                            <ul class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain" style="color: #e67c1f;">
+                                <li>General queries:<br>Lakshya: 9535528465</li>
+                                <li>Event queries:Shreyas: 6361110359</li>
+                                <li>Registration queries:<br>Vineet: 8660282426</li>
+                                <li>Travel and accommodation queries:<br>Yatharth: 6364000899</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-              
             </div>
-    
         </div>
         <div class="copy-right_text" style="margin-top: -5%;">
             <div class="container">
