--- a/templates/about.html
+++ b/templates/about.html
@@ -231,7 +231,7 @@
             </div>
             <div class="single_info" >
                 <span>Phone:</span>
-                <p style="font-size:15px;">E Travel and accomodation queries Yatharth:6364000899
+                <p style="font-size:15px;">Travel and accomodation queries Yatharth:6364000899
                    <br> General queries Lakshya:9535528465
                    <br> Event queries Shreyas:6361110359
                    <br> Registration queries Vineet:8660282426
