wt man small changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -134,7 +134,7 @@
                 <div class="section_title text-center mb-80">
               
                     <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
-                        TAMS: Where Science Meets Fun and Innovation!</h3>
+                        TAMS: Where Science and commerce Meets Fun and Innovation!</h3>
     
                     
                     <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">Step into The Amateur Managers and Scientists (TAMS), where passion meets innovation! Join us for an exciting journey through the realms of science and management, designed to inspire and challenge amateur enthusiasts. This year, we're bringing together the brightest minds from grades 8 to 12 from various institutions across India. Get ready for an unforgettable experience filled with learning, competition, and collaboration.<br>
